# SpaceBattle

./: README.md  setup.sh
Components/Client/: CMakeLists.txt
Components/Client/assets/materials/: Skybox.xml
Components/Client/assets/models/: board.mdl
Components/Client/assets/style/: ui_style.xml
Components/Client/assets/textures/: SkyboxTexture.xml
Components/Client/assets/ui/: base.xml  chat_general.xml  chat_room.xml  loading.xml
Components/Client/assets/ui/menu/: connect_server.xml  create_game.xml  ingame.xml  main.xml  waiting_players.xml
Components/Client/include/: App.hh  GameLogic.hh
Components/Client/include/Network/: BattleAPI.hpp  Client.hpp  PacketManager.hpp
Components/Client/include/Tools/: BufferDataManager.cpp  BufferDataManager.hpp  ConcurrentQueue.hpp  Observer.hpp  Subject.hpp
Components/Client/include/graphic/: AUrhoGameGraphics.hh  GameGraphics.hh  IGameGraphics.hh
Components/Client/include/graphic/board/: AUrhoGameBoard.hh  GameBoard.hh  IGameBoard.hh
Components/Client/include/graphic/ship/: AShip.hh  AUrhoShip.hh  IShip.hh  Ship.hh
Components/Client/include/graphic/utils/: UrhoGraphicsHeaders.hh
Components/Client/include/ui/: GameUI.hh  IGameUI.hh
Components/Client/include/ui/component/: ChatComponent.hh  IUIComponent.hh  MainMenuComponent.hh
Components/Client/include/ui/urho/: AUrhoGameUI.hh
Components/Client/include/ui/urho/component/: AUrhoUIComponent.hh
Components/Client/sample/: old_main_sample_last_to_keep.cpp  old_main_sample_to_keep.cpp
Components/Client/src/: App.cpp  GameLogic.cpp
Components/Client/src/Network/: BattleAPI.cpp  Client.cpp  PacketManager.cpp
Components/Client/src/graphic/: GameGraphics.cpp
Components/Client/src/graphic/board/: GameBoard.cpp
Components/Client/src/ui/: GameUI.cpp
Components/Client/test/src/: main.cpp
Components/Commun/include/Commun/Engine/: Chanel.hpp  ClientState.hpp  FinalGameStatus.hpp  Ships.hpp  ShootState.hpp  TimeLimit.hpp
Components/Commun/include/Commun/Exception/: BufferDataManagerException.hpp  ConfException.hpp  CoreException.hpp  DispatcherException.hpp  HelpException.hpp  IException.hpp  NetworkException.hpp
Components/Commun/include/Commun/Network/: Packet.hpp  PacketHeader.hpp  PacketManager.hpp
Components/Commun/include/Commun/Network/Requests/: AuthenticateReq.hpp  AuthenticateResp.hpp  BroadcastChatMsgResp.hpp  CreateRoomReq.hpp  CreateRoomResp.hpp  EndGameStatusReq.hpp  ExitRoomReq.hpp  GameReadyToLaunchReq.hpp  GetRoomListReq.hpp  GetRoomListResp.hpp  IRequest.hpp  (+19 more)
Components/Commun/include/Commun/Room/: State.hpp
Components/Commun/include/Commun/Tools/: BufferDataManager.cpp  BufferDataManager.hpp  Singleton.hpp
Components/Commun/src/Commun/Network/: PacketManager.cpp
Components/Commun/test/include/Commun/: UTWorkDirectory.hpp
Components/Commun/test/src/Commun/: ExceptionTest.cpp  LogTest.cpp
Components/Server/: CMakeLists.txt
Components/Server/doc/ClassDiagram/: Commun.puml  Server.puml
Components/Server/doc/ClassDiagram/AtomicView/: Configuration.puml  Core.puml  Engine.puml  Exception.puml  Log.puml  Network.puml  Requests.puml
Components/Server/include/Conf/: Engine.hpp  OptionsHandler.hpp
Components/Server/include/Core/: SpaceBattle.hpp
Components/Server/include/Engine/: ACommander.hpp  PacketDispatcher.hpp
Components/Server/include/Engine/Room/: Battlefield.hpp  Player.hpp  Room.cpp  Room.hpp  Ship.hpp
Components/Server/include/Engine/RoomManager/: Authenticate.cpp  CreateRoom.cpp  ExitRoom.cpp  GetRoomList.cpp  JoinRoom.cpp  RoomManager.cpp  RoomManager.hpp  SendChatMsg.cpp  ViewRoom.cpp
Components/Server/include/Network/: BattleAPI.hpp  ClientManager.hpp  Server.hpp
Components/Server/src/: main.cpp
Components/Server/src/Conf/: OptionsHandler.cpp
Components/Server/src/Core/: SpaceBattle.cpp
Components/Server/src/Engine/: PacketDispatcher.cpp
Components/Server/src/Engine/Room/: Battlefield.cpp  Player.cpp  Ship.cpp
Components/Server/src/Network/: BattleAPI.cpp  ClientManager.cpp  Server.cpp
Components/Server/test/include/Engine/: ACommanderTest.hpp  Logger.hpp
Components/Server/test/src/: ClientManagerTest.cpp  OptionsHandlerTest.cpp  main.cpp
Components/Server/test/src/Engine/: ACommanderTest.cpp  AuthentificateTest.cpp  CreateRoomTest.cpp  EndGameTest.cpp  GetRoomListTest.cpp  JoinRoomTest.cpp  LaunchGameTest.cpp  PacketDispatcherTest.cpp  RoomManagerTest.cpp  SendChatMsgTest.cpp  SetUserBattleShipTest.cpp  ShipTest.cpp  ShootShipTest.cpp  ViewRoomTest.cpp
Documentations/: RFC- Protocol.txt  Template-Software-Architecture-Specifications-V2.docx  Template-Software-Qualification-Specifications-Acceptance-V2.docx  Template-Software-Qualification-Specifications-V2.docx
OpenLibs/sckcpp/: CMakeLists.txt
OpenLibs/sckcpp/include/sckcpp/: Client.hpp  ClientHelper.hpp
OpenLibs/sckcpp/src/sckcpp/: Client.cpp  TcpServerSocket.cpp
Setup/: build_app.sh  build_libs.sh  submodules_upgrade.sh
(+7 files in other folders)
